--- a/yaoyue/mine-target.html
+++ b/yaoyue/mine-target.html
@@ -21,15 +21,18 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-xs-4 control-label no-padding">邀约到店客资数</label>
+        <label class="col-xs-4 control-label no-padding">邀约到店数</label>
         <div class="col-xs-8 no-padding-left">
           <input name="invite_customer_number" type="number" class="form-control">
         </div>
       </div>
       <div class="form-group">
-        <label class="col-xs-4 control-label no-padding">网络成交客资数</label>
+        <label class="col-xs-4 control-label no-padding">邀约到店率</label>
         <div class="col-xs-8 no-padding-left">
-          <input name="network_paid_customer_number" type="number" class="form-control">
+          <div class="input-group">
+            <input name="network_paid_customer_number" type="number" min="0" max="101" step="1" class="form-control">
+            <div class="input-group-addon">%</div>
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -54,7 +57,7 @@
 <script>
   var isUpdate = false,
       uuid = '';
-  
+
   // 获取初始化数据
   getData(1);
 
@@ -88,7 +91,7 @@
   $('select[name=time_type]').change(function(){
     getData($(this).val());
   });
-  
+
   $('#form').bootstrapValidator({
     // live: 'disabled',
     message: '数据验证未通过',
