--- a/yaoyue/list.html
+++ b/yaoyue/list.html
@@ -1,99 +1,224 @@
 <link rel="import" href="../components/head.html?__inline">
 
+<link rel="import" href="../components/link-datepicker-head.html?__inline">
+
 <div class="container">
   <div class="map-head">
     <span class="vertical-line"></span>客资列表
     <div class="filter">
-      <select class="form-control input-sm customer-status">
-      </select>
+      <a class="btn btn-primary btn-xs" id="search-btn">高级搜索</a>
     </div>
   </div>
   <table class="table table-bordered table-striped table-small">
-      <thead>
-        <tr>
-          <th class="table-th-width-44">序号</th>
-          <th class="table-th-width-65">姓名</th>
-          <th>接收时间</th>
-          <th class="table-th-width-44">类别</th>
-          <th>状态</th>
-        </tr>
-      </thead>
-      <tbody id="table-content">
-      </tbody>
-    </table>
-
+    <thead>
+      <tr>
+        <th class="table-th-width-44">序号</th>
+        <th class="table-th-width-65">姓名</th>
+        <th>接收时间</th>
+        <th class="table-th-width-44">类别</th>
+        <th>状态</th>
+      </tr>
+    </thead>
+    <tbody id="table-content">
+    </tbody>
+  </table>
+  <div class="search" style="display: none">
+    <div class="panel panel-primary">
+      <div class="panel-body">
+        <form id="form" action="" class="form-horizontal" role="form">
+          <div class="form-group">
+            <label class="col-xs-3 control-label no-padding">姓名</label>
+            <div class="col-xs-9 no-padding-left">
+              <input name="customer_name" type="text" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-xs-3 control-label no-padding">手机号</label>
+            <div class="col-xs-9 no-padding-left">
+              <input name="customer_cellphone" type="number" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-xs-3 control-label no-padding">登记时间</label>
+            <div class="col-xs-9 no-padding-left no-padding-right">
+              <div class="col-xs-6 no-padding-left">
+                <input type="text" class="form-control datepicker" readonly="readonly">
+                <input name="bb_time_1" type="hidden">
+              </div>
+              <div class="col-xs-6 no-padding-left">
+                <input type="text" class="form-control datepicker" readonly="readonly">
+                <input name="bb_time_2" type="hidden">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-xs-3 control-label no-padding">客资类型</label>
+            <div class="col-xs-9 no-padding-left">
+              <select name="customer_flag" class="form-control">
+                <option value="">请选择</option>
+                <option value="1">A</option>
+                <option value="2">B</option>
+                <option value="3">C</option>
+                <option value="4">D</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-xs-3 control-label no-padding">客资状态</label>
+            <div class="col-xs-9 no-padding-left" id="customer-status-checkbox" data-name="customer_status">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-xs-offset-2 col-xs-4">
+              <input onclick="hideSearch()" type="button" class="btn btn-default btn-block" value="取消">
+            </div>
+            <div class="col-xs-4">
+              <input type="submit" class="btn btn-primary btn-block" value="查询">
+            </div>
+          </div>
+        </form>
+      </div>
+      <p>快捷搜索</p>
+      <div class="panel-body">
+        <button type="button" class="quick-search btn btn-primary btn-sm btn-block" data-name="1">
+          最近5日内还没有下发的客资
+        </button>
+        <button type="button" class="quick-search btn btn-primary btn-sm btn-block" data-name="2">
+          超过5日没有下发的客资
+        </button>
+        <button type="button" class="quick-search btn btn-primary btn-sm btn-block" data-name="3">
+          超过10天没有下发的客资
+        </button>
+        <button type="button" class="quick-search btn btn-primary btn-sm btn-block" data-name="4">
+          超过30天没有下发的客资
+        </button>
+        <br>
+        <button type="button" class="quick-search btn btn-primary btn-sm btn-block" data-name="5">
+          最近3天到店了，但是没有成交的客资
+        </button>
+        <button type="button" class="quick-search btn btn-primary btn-sm btn-block" data-name="6">
+          最近3天未到店，门市改期客资
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
+
+<link rel="import" href="../components/link-datepicker-foot.html?__inline">
 
 <script>
 	iframe.init();
 </script>
 
 <script>
-  var searchParams =  {
-    invite_id: api.userInfo.userUuid
-  },
-  // 以下两个暂时预留不用
-  pageIndex = request.getParam('pageIndex')?request.getParam('pageIndex'):0,
-  pageSize = request.getParam('pageSize')?request.getParam('pageSize'):999;
+  // 高级查询多选
+  var customerStatusCheckBoxContainer = $('#customer-status-checkbox'),
+      customerStatusCheckBoxName = customerStatusCheckBoxContainer.data('name');
+  customerStatusCheckBoxContainer.html(
+    api.getCustomerStatusCheckBoxes([2,3,4,5,6,7,8,9,10,14], customerStatusCheckBoxName)
+  );
 
-  // 下拉筛选
-  $('.customer-status').html(api.getCustomerStatusOptions([-1,2,3,4,5,6,7,8,9,10,14]));
+  // 高级搜索点击事件
+  function showSearch() {
+    $('.filter').hide();
+    $('.table').hide();
+    $('.search').show();
+    iframe.init();
+  }
+  function hideSearch(){
+    $('.filter').show();
+    $('.table').show();
+    $('.search').hide();
+    iframe.init();
+  }
+  $('#search-btn').click(function(){
+    showSearch();
+  });
 
-  // 筛选事件
-  $('.customer-status').change(function(){
-    var value = parseInt($(this).val());
-    if(value == -1){
-      delete searchParams['customer_user_status'];
-    }else{
-      searchParams['customer_user_status'] = value;
+  // 高级搜索提交
+  $('#form').submit(function(){
+    var params = {};
+    // 表单数据
+    params['name'] = $('input[name=customer_name]').val();
+    params['cellphone'] = $('input[name=customer_cellphone]').val();
+    params['bb_time_1'] = $('input[name=bb_time_1]').val();
+    params['bb_time_2'] = $('input[name=bb_time_2]').val();
+    params['customer_flag'] = $('select[name=customer_flag]').val();
+    var statusArray = new Array();
+    $('input[name=customer_status]:checked').each(function(){
+        statusArray.push($(this).val());
+    });
+    params['status'] = statusArray.join(',');
+    getNewApiData(params);
+    hideSearch();
+    return false;
+  });
+
+  // 快速搜索
+  $('.quick-search').click(function(){
+    // 清除全部 input 状态
+    $('input[type=text], input[type=number]').val('');
+    $('input[type=checkbox]').attr('checked', false);
+    $('select').val('');
+
+    var quickType = $(this).data('name');
+    var params = {
+      quick: 1,
+      quick_type: quickType
     }
-    setTableList(searchParams, pageIndex, pageSize);
+    getNewApiData(params);
+    hideSearch();
   });
 
   // 初始化加载数据
-  setTableList(searchParams, pageIndex, pageSize);
-  
-  // 设置表格数据
-  function setTableList(searchParams, pageIndex, pageSize){
-    api.listObject('BusCustomer', searchParams, pageIndex, pageSize, function(data){
-      var tabelTbody = '',
-          baobeiTime,
-          customerFlag,
-          customerStatus;
-      if(data){
-        $.each(data.list, function(index, item){
-          // 排除部分数据
-          if(item.validFlag == 2){ // 无效客资跳过
-            logger('无效客资跳过', item);
-            return true;
-          }
-          if(item.customerUserStatus == 1){ // 未被接收的客资跳过
-            logger('未被接收的客资跳过', item);
-            return true;
-          }
-          // 格式化数据
-          baobeiTime = api.getFormatDate(item.yycreateTime, "yyyy-MM-dd\nhh:mm:ss");
-          customerFlag = api.getCustomerFlagName(item.customerFlag);
-          customerStatus = api.getStatusName(item.customerUserStatus);
-          // 构造table body
-          tabelTbody +=
-          '<tr onclick="javascript:window.location.href=\'detail.html?id='+ item.uuid +'\'">'
-            + '<td>'+ (index+1) +'</td>'
-            + '<td width="65">'+ item.name1 +'</td>'
-            + '<td>'+ baobeiTime +'</td>'
-            + '<td>'+ customerFlag +'</td>'
-            + '<td>'+ customerStatus +'</td>'
-            + '</tr>'
-            + "\n";
-        });
-      }
-      // 一次性加到页面上
-      $('#table-content').html(tabelTbody);
-      // 重新设定 iframe 高度
-      iframe.changeHeight();
+  getNewApiData({});
+
+  // 获取new api的数据
+  function getNewApiData(searchParams){
+    newApi.search('yy', searchParams, function(data){
+      setTableList(data);
     });
   }
-  
+
+  // 设置表格数据
+  function setTableList(data){
+    var tabelTbody = '',
+        baobeiTime,
+        customerFlag,
+        customerStatus;
+    if(data){
+      $.each(data.list, function(index, item){
+        // 排除部分数据
+        if(item.validFlag == 2){ // 无效客资跳过
+          logger('无效客资跳过', item);
+          return true;
+        }
+        if(item.status == 1){ // 未被接收的客资跳过
+          logger('未被接收的客资跳过', item);
+          return true;
+        }
+        // 格式化数据
+        baobeiTime = api.getFormatDate(parseInt(item.getTime), "yyyy-MM-dd\nhh:mm:ss");
+        customerFlag = api.getCustomerFlagName(item.customerFlag);
+        customerStatus = api.getStatusName(item.status);
+        // 构造table body
+        tabelTbody +=
+        '<tr onclick="javascript:window.location.href=\'detail.html?id='+ item.uuid +'\'">'
+          + '<td>'+ (index+1) +'</td>'
+          + '<td width="65">'+ item.name +'</td>'
+          + '<td>'+ baobeiTime +'</td>'
+          + '<td>'+ customerFlag +'</td>'
+          + '<td>'+ customerStatus +'</td>'
+          + '</tr>'
+          + "\n";
+      });
+    }
+    // 一次性加到页面上
+    $('#table-content').html(tabelTbody);
+    // 重新设定 iframe 高度
+    iframe.changeHeight();
+  }
+
 </script>
 
 <link rel="import" href="../components/foot.html?__inline">
